--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ password=pihVed-qyrfev-7pitfo
 host=aws-0-eu-central-1.pooler.supabase.com
 port=6543
 dbname=postgres
+JWT_SECRET=mon_projet_agrobloc_jwt
  
